--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,27 +2,22 @@ spring:
   application:
     name: order-service
 
-# MongoDB Atlas Connection
+  # MongoDB Atlas Connection
   data:
     mongodb:
-      uri: mongodb+srv://abhiumap31:RilGQicKUHIhUWuP@cluster0.2lirn.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+      uri: mongodb+srv://abhiumap31:RilGQicKUHIhUWuP@cluster0.2lirn.mongodb.net/order-service?retryWrites=true&w=majority&appName=Cluster0
 
-# Additional Spring Boot MongoDB properties (optional)
-      database: order-service
+server:
+  port: 8081
 
-
-# Hibernate and JPA properties (if applicable)
-  jpa:
-    show-sql: true
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MongoDialect
+# Additional Spring Boot JPA properties (if MongoDB is used with JPA)
+jpa:
+  show-sql: true
+  properties:
+    hibernate:
+      dialect: org.hibernate.dialect.MongoDialect
 
 # Logging Level
 logging:
   level:
-    org:
-      springframework:
-        data:
-          mongodb:
-            core: DEBUG
+    '[org.springframework.data.mongodb.core]': DEBUG
